# exercise-book-generator

./: .env.example  .gitignore
dagster_project/: .gitignore  dagster.yaml  pyproject.toml
dagster_project/.dg/: telemetry.yaml
dagster_project/dbt/: .user.yml  dbt_project.yml  profiles.yml
dagster_project/dbt/models/: sources.yml
dagster_project/dbt/models/bronze/: bronze_epub_registry.sql  epub_registry.sql  schema.yml
dagster_project/dbt/models/gold/: gold_chapter_enriched.sql  schema.yml
dagster_project/notebooks/: explore_books.ipynb
dagster_project/plans_dagster/: move_to_dbt_bronze.md  plan_categorize_chapter.md  plan_translation_chapters.md
dagster_project/src/dagster_project/: definitions.py  test.py
dagster_project/src/dagster_project/defs/: assets.py  bronze.py  checks.py  dbt.py  gold.py  gold_chapter_language.py  gold_chapter_swedish_a2_summary.py  gold_chapter_swedish_a2_text.py  gold_chapter_swedish_b1b2_text.py  gold_chapter_swedish_text.py  partitions.py  silver.py
dagster_project/src/dagster_project/libs/: chapter_b1b2_rewriter.py  chapter_categorizer.py  chapter_simplifier.py  chapter_summariser.py  chapter_translator.py  epub_parser.py  language_detector.py
dagster_project/src/dagster_project/resources/: object_store.py  storage.py  vertex_ai.py
dagster_project/tests/: test_epub_parser.py
frontend-swedish-books/: Dockerfile  books_extract.json  fly.toml  index.html  package-lock.json  package.json
frontend-swedish-books/src/: App.jsx
plans/: plan_architecture.md  plan_general.md
