[project]
name = "dagster_project"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.20",
    "dagster-gcp>=0.25.0",
    "google-cloud-bigquery>=3.0.0",
    "google-cloud-storage>=2.0.0",
    "pandas>=2.3.3",
    "db-dtypes>=1.0.0",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.12.0",
    "langdetect>=1.0.9",
    "python-dotenv>=1.2.2",
    "ebooklib>=0.18",
    "lxml>=5.0.0",
    "polars>=1.0.0",
    "html2text>=2024.2.26",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_project"
registry_modules = [
    "dagster_project.components.*",
]


